--- a/INDEX.html
+++ b/INDEX.html
@@ -144,5 +144,7 @@
         ></a>
       </p>
     </footer>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
