--- a/INDEX.html
+++ b/INDEX.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="STYLE.css" />
     <title>Document</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.8/typed.min.js"></script>
   </head>
   <body>
     <!-- start nav -->
@@ -145,6 +146,6 @@
       </p>
     </footer>
 
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
   </body>
 </html>
